[package]
name = "base58check"
description = "Base58Check encoding"
version = "0.1.0"
license = "MIT/Apache-2.0"
authors = ["Vitaly Domnikov <oss@vitaly.codes>"]
documentation = "https://github.com/dotcypress/base58check"
homepage = "https://github.com/dotcypress/base58check"
readme = "README.md"
repository = "https://github.com/dotcypress/base58check"

[badges.appveyor]
branch = "master"
repository = "dotcypress/base58check"
service = "github"

[badges.travis-ci]
branch = "master"
repository = "dotcypress/base58check"

[dependencies]
base58 = "0.1.0"
sha2 = "0.8"
